RESOLVED FIXED152708
isUntypedSpeculationForArithmetic is wrong
https://bugs.webkit.org/show_bug.cgi?id=152708
Summary isUntypedSpeculationForArithmetic is wrong
Filip Pizlo
Reported 2016-01-04 12:26:26 PST
It will currently return true anytime that the prediction set does not contain numeric types. That's not correct.
Attachments
proposed patch. (1.74 KB, patch)
2016-01-04 14:46 PST, Mark Lam
fpizlo: review+
x86_64 benchmark result. (66.40 KB, text/plain)
2016-01-04 14:49 PST, Mark Lam
no flags
x86 benchmark result. (65.98 KB, text/plain)
2016-01-04 14:49 PST, Mark Lam
no flags
Mark Lam
Comment 1 2016-01-04 14:46:59 PST
Created attachment 268235 [details] proposed patch.
Mark Lam
Comment 2 2016-01-04 14:49:09 PST
Created attachment 268236 [details] x86_64 benchmark result.
Mark Lam
Comment 3 2016-01-04 14:49:43 PST
Created attachment 268237 [details] x86 benchmark result.
Mark Lam
Comment 4 2016-01-04 14:56:12 PST
Thanks for the review. Landed in r194560: <http://trac.webkit.org/r194560>.
Note You need to log in before you can comment on or make changes to this bug.