isUntypedSpeculationForArithmetic is wrong. https://bugs.webkit.org/show_bug.cgi?id=152708

Reviewed by Filip Pizlo.

The isUntypedSpeculation...() checks should return true is we ever see
non-numeric types, regardless of whether numeric types are seen or not.
Previously, they only return true if we only see non-numeric types, and false if
we ever see numeric types.

This patch is perf neutral on both x86_64 and x86.

* bytecode/SpeculatedType.h:
(JSC::isUntypedSpeculationForArithmetic):
(JSC::isUntypedSpeculationForBitOps):



Canonical link: https://commits.webkit.org/170798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194560 268f45cc-cd09-0410-ab3c-d52691b4dbfc